# CardGameProject

./: CMakeLists.txt  carte.cpp  carte.h  carte.ui  choice_difficulte.cpp  choice_difficulte.h  choice_difficulte.ui  dialog.cpp  dialog.h  dialog.ui
